[package]
name = "compass"
version = "0.0.1"
authors = ["cak <cak@fastmail.com>"]
edition = "2018"
description = "Web Application Recon Tool (BETA)"
repository = "https://github.com/OptionalValue/compass"
keywords = ["recon"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = "0.12"
reqwest = "0.9"
select = "0.4"
serde = "1.0"
serde_json = "1.0"
